--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>tic-tac-toe</title>
 </head>
 <body>
-    <div class="board o">
-        <div class="cell x"></div>
-        <div class="cell o"></div>
+    <div class="board">
+        <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -20,6 +20,12 @@
         <div class="cell"></div>
         <div class="cell"></div>
     </div>
-    
+    <div class="start-screen">
+        <div class="text-display">How many humans are you?</div>
+        <div class="character-select">
+            <div class="char one">1</div>
+            <div class="char two">2</div>
+        </div>
+    </div>
 </body>
 </html>
