--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 </head>
 <body>
     <div class="board">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell-container">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
     </div>
     <div class="start-screen">
         <div class="text-display">How many humans are you?</div>
         <div class="character-select">
-            <div class="char one">1</div>
-            <div class="char two">2</div>
+            <div class="one">1</div>
+            <div class="two">2</div>
         </div>
     </div>
 </body>
