add css strikethrough animations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="board">
-        <div class="cell-container">
+        <div class="cell-container rows">
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
