--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>tic-tac-toe</title>
 </head>
 <body>
+    <div class="winDisplay"></div>
     <div class="board">
-        <div class="cell-container rows">
+        <div class="cell-container">
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
