--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>tic-tac-toe</title>
 </head>
 <body>
-    <div class="winDisplay"></div>
+    <div class="winDisplay">
+        <div class="winning-character"></div>
+        <div class="message"></div>
+    </div>
     <div class="board">
         <div class="cell-container">
             <div class="cell"></div>
@@ -23,6 +26,7 @@
             <div class="cell"></div>
         </div>
     </div>
+    <div class="buttons"></div>
     <div class="start-screen">
         <div class="text-display">How many humans are you?</div>
         <div class="character-select">
